--- a/localisation/english/countries_europe/geacps_CZE_l_english.yml
+++ b/localisation/english/countries_europe/geacps_CZE_l_english.yml
@@ -3,9 +3,7 @@
  CZE_joint_with_exiles:0 "Merge with the Government-in-Exile"
  CZE_establish_constitution:0 "Re-enact the Constitution"
  CZE_purge_tisso_faction:0 "Purge the Tisoites"
- CZE_remember_herba:0 "Remember Herba's Tragedy"
  CZE_cheer_up_slovak:0 "Cheer Up the Slovakia Region"
- CZE_beness_relaxtion:0 "Relax the Benesh Decrees"
  CZE_republic_procalm:0 "Proclaim the Republic"
  CZE_democratic_election:0 "Democratic Elections"
  CZE_fate_of_masaryk:0 "Deal with Masaryk"
@@ -32,12 +30,10 @@
  CZE_befriend_west:0 "Approach the Anglo-French"
  CZE_weapon_export_west:0 "Export Weapons to the Western Bloc"
  CZE_middle_of_europe:0 "East-West Mediation"
- CZE_to_the_allys:0 "To the Allies"
  CZE_independent_diplo:0 "Non-Aligned Diplomacy"
  CZE_befriend_with_friends:0 "Mutual Agreements with our Neighbors"
  CZE_third_way:0 "Third Way"
  CZE_following_comintern:0 "Follow the ComIntern"
- CZE_mutual_id_Economy:0 "Mutual Aid Economy"
  CZE_joint_tank_research:0 "Joint Tank Research"
  CZE_rostov_agreement:0 "The Rostov Agreement"
  CZE_neutralization:0 "Begin Non-Alignment"
@@ -67,16 +63,13 @@
  CZE_slovak_line:0 "The Slovakia Line"
  CZE_withdrawal_line:0 "Fall-back Lines"
  CZE_socialist_industrialization:0 "Socialist Industrialization"
- CZE_state_security:0 "StB"
  CZE_focus_tree:0 "[ROOT.GetName] focus tree"
  CZE_focus_on_CAS:0 "Focus on Close Air Support"
  CZE_resurrection_desc:0 "TODO"
  CZE_joint_with_exiles_desc:0 "TODO"
  CZE_establish_constitution_desc:0 "TODO"
  CZE_purge_tisso_faction_desc:0 "TODO"
- CZE_remember_herba_desc:0 "TODO"
  CZE_cheer_up_slovak_desc:0 "TODO"
- CZE_beness_relaxtion_desc:0 "TODO"
  CZE_republic_procalm_desc:0 "TODO"
  CZE_democratic_election_desc:0 "TODO"
  CZE_fate_of_masaryk_desc:0 "TODO"
@@ -103,12 +96,10 @@
  CZE_befriend_west_desc:0 "TODO"
  CZE_weapon_export_west_desc:0 "TODO"
  CZE_middle_of_europe_desc:0 "TODO"
- CZE_to_the_allys_desc:0 "TODO"
  CZE_independent_diplo_desc:0 "TODO"
  CZE_befriend_with_friends_desc:0 "TODO"
  CZE_third_way_desc:0 "TODO"
  CZE_following_comintern_desc:0 "TODO"
- CZE_mutual_id_Economy_desc:0 "TODO"
  CZE_joint_tank_research_desc:0 "TODO"
  CZE_rostov_agreement_desc:0 "TODO"
  CZE_neutralization_desc:0 "TODO"
@@ -214,3 +205,17 @@
  CZE_build_infra:0 "Enhance Public Infrastructure"
  CZE_build_infra_desc:0 "TODO"
  CZE_peoples_democracy_manifesto:0 "People's Democracy Manifesto"
+ CZE_remember_hacha:0 "Remember the Tragedy of Hacha"
+ CZE_remember_hacha_desc:0 "TODO"
+ CZE_benes_relaxtion:0 "Relax the Benes Decrees"
+ CZE_benes_relaxtion_desc:0 "TODO"
+ CZE_to_the_western_european_union:0 "To a Western European Alliance"
+ CZE_to_the_western_european_union_desc:0 "TODO"
+ CZE_to_the_westminster_treaty_organisation:0 "Towards the Westminster Treaty Organization"
+ CZE_to_the_westminster_treaty_organisation_desc:0 "TODO"
+ CZE_mutual_aid_economy:0 "Mutual Aid Economy"
+ CZE_mutual_aid_economy_desc:0 "TODO"
+ CZE_spreading_flames_of_revolution:0 "Spreading Flames of Revolutions"
+ CZE_spreading_flames_of_revolution_desc:0 "After the infamous Munich Conference, the Czechoslovak government left for London, while the Communists - who didn't approve of this - continued to rebel at home. As a result of leading the fight against the Germans for several years, the craving for a Socialist revolution has grown to the point of it being considered a fait accomplí, giving hope to our workers."
+ CZE_honor_state_in_eastern_europe:0 "The Elite of Eastern Europe"
+ CZE_honor_state_in_eastern_europe_desc:0 "Among the nations that emerged in Eastern Europe after World War I, only Czechoslovakia managed to develop a stable democracy and a parliamentary government. We once succumbed to the invader's iron fist, this time we won't fail. The revolution of 1918 remains our pride!"
