--- a/localisation/english/generic/geacps_bookmarks_l_english.yml
+++ b/localisation/english/generic/geacps_bookmarks_l_english.yml
@@ -3,19 +3,17 @@
  THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "In the 16th year of Showa (1945), Japan entered a state of conflict against the United States in the Pacific. Surviving this sacred war, the Empire created the Greater East Asia Co-prosperity Sphere under the principles of Hakkou Ichiu and of an East Asian New Order.\nJapan became a land where the sun never set, but also had its fair share of problems.\nPublic distrust of party politics, rising militarism, the still-ongoing China Incident, independence movements in the colonies, the Red Empire vying to reclaim its Far East, and the Empire of Freedom secretly seeking revenge...\n\nWill the future of our country be prosperity or downfall?"
  THE_CHAOS_OF_EUROPE_NAME:0 "Europe in Chaos"
  THE_CHAOS_OF_EUROPE_DESC:0 "Europe in Chaos...\nIn the last war, the emerging Italian and German powers were successfully defeated alongside their allies. However, the actions of the victors, each moving independently, failed to build a new post-war order. The power structure which later became known as the \"Cold War\" continued to cast its shadow on the United Kingdom, France, and the Red Empire. The former First Power split into three factions, with its largest part, the South, breaking away from its control. \nEurope divided itself between Stettin in the Baltic and Trieste in the Adriatic, while a famous cross-strait conflict was starting to intensify once more..."
- SPR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- FRA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- SWE_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- POL_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- SER_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- RUS_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- CHI_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "The Sino-Japanese war, starting in the summer of 1937, still goes on nearly ten years later.\n\nThe Kuomintang-led central government still hasn't given up on victory in this long conflict against the Greater East Asia Co-Prosperity Sphere, led by the Empire of Japan. All the while, the Republic's strength as a nation has been exhausted, with the local warlords no longer willing to follow the central government's instructions.\n\nIn addition, some members of the Chinese United Front are also thinking about leaving the alliance, each country focusing on how to conserve its own strength.\n\nUnfortunately, with the diminishing influence of the Republic of China, international public opinion now believes that defeating the Sphere is no longer possible."
- TIB_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- MON_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- MEN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- MAN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "The Empire of Japan won its last war against the United States of America. Before this event the \"Kingdom of Hawaii\", which held close relationship with both the Japanese and the Americans, and was sandwiched between the two, had achieved federalization with the Asian power, a concept proposed for many years.\n\nThe battle still goes on in the west, but in the north Japan has acquired North Sakhalin via a treaty with Transbaikal, which rose up against the Soviet Union. In the south, the Empire succeeded in expanding its sphere of influence to the American, British, French, and Dutch colonies through various means.\n\nThe Far East... In other words, the island nation located under the Rising Sun has become a major power within 100 years of its modernization. We now must prosper without having this sun set on us.\n\nTennoheika banzai! Dainippon Teikoku banzai!"
- AST_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- TUR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- SIA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- GBR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "Britain has barely won the World War, and it now has a lot of problems. How will the Labour Party, led by Clement Attlee, deal with the worsening relations with itsneighbors, with the other side of the Iron Curtain, and with the accelerated decolonization?"
+ POL_start_desc:0 ""
+ ITA_start_desc:0 ""
+ RUS_start_desc:0 ""
+ FRA_start_desc:0 ""
+ JAP_start_desc:0 "The Empire of Japan won its last war against the United States of America. Before this event the \"Kingdom of Hawaii\", which held close relationship with both the Japanese and the Americans, and was sandwiched between the two, had achieved federalization with the Asian power, a concept proposed for many years.\n\nThe battle still goes on in the west, but in the north Japan has acquired North Sakhalin via a treaty with Transbaikal, which rose up against the Soviet Union. In the south, the Empire succeeded in expanding its sphere of influence to the American, British, French, and Dutch colonies through various means.\n\nThe Far East... In other words, the island nation located under the Rising Sun has become a major power within 100 years of its modernization. We now must prosper without having this sun set on us.\n\nTennōheika banzai! Dainippon Teikoku banzai!"
+ GBR_start_desc:0 "While the United Kingdom of Great Britain has managed to win the war, many problems beset it. With eteriorating relations with its neighbors and the other side of the Iron Curtain, as well as the approaching decolonization, what will Clement Attlee's Labour Party do...?"
+ USA_start_desc:0 ""
+ WGR_start_desc:0 ""
+ CZE_start_desc:0 "While Britain and France recognize the government-in-exile, in the homeland's parliament, the National Front, the Communist Party and the social democrats occupy about one-third of the seats, keeping order with armed forces mainly made up of former partisans.\nIf not dealt with properly, the Republic's reviving flame of democracy will be extinguished, leaving only a cold wind in its stead..."
+ GRE_start_desc:0 ""
+ SIC_start_desc:0 ""
+ CHI_start_desc:0 "The Sino-Japanese War, breaking out in the summer of 1937, is still continuing today, after nearly ten years of fighting.\n\nIn its long war with the Greater East Asia Co-Prosperity Sphere led by the Empire of Japan, the Kuomintang Central Government has not yet given up on its dream of victory. However, the national power of the Republic of China is exhausted and the warlords are no longer willing to follow its instructions.\n\nMoreover, the members of the Chinies United Front want to leave it, each country focusing on how to best preserve its own forces.\n\nWith the Republic of China's influence declining, the international community is starting to fear that overcoming the Sphere may no longer be possible."
+ FEA_start_desc:0 ""
+ COUNTRY_start_desc:0 ""
