--- a/localisation/english/generic/geacps_characters_l_english.yml
+++ b/localisation/english/generic/geacps_characters_l_english.yml
@@ -487,3 +487,17 @@
  CHARACTER_manuel_arturo_odria_amoretti_desc:0 ""
  CHARACTER_tomas_berreta_gandolfo:0 "Tomás Berreta Gandolfo"
  CHARACTER_tomas_berreta_gandolfo_desc:0 ""
+ CHARACTER_jafar_pishevari:0 "Ja'far Pishevari"
+ CHARACTER_sayyed_jafar_pishevari:0 "Sayyed Ja'far Pishevari"
+ CHARACTER_sayyed_jafar_pishevari_desc:0 "President of the Autonomous Republic of Azerbaijan"
+ CHARACTER_theodor_korner:0 "Theodor Körner"
+ CHARACTER_theodor_korner_edler_von_siegringen:0 "Theodor Körner, Edler von Siegringen"
+ CHARACTER_theodor_korner_edler_von_siegringen_desc:0 "Mayor and Governor of Vienna"
+ CHARACTER_arthur_werner:0 "Arthur Werner"
+ CHARACTER_arthur_victor_hugo_werner:0 "Arthur Victor Hugo Werner"
+ CHARACTER_arthur_victor_hugo_werner_desc:0 "Governing Mayor of Berlin"
+ CHARACTER_kaiulani:0 "Kaʻiulani"
+ CHARACTER_victoria_kawekiu_kaiulani_lunalilo_kalaninuiahilapalapa_cleghorn:0 "Victoria Kawēkiu Kaʻiulani Lunalilo Kalaninuiahilapalapa Cleghorn"
+ CHARACTER_victoria_kawekiu_kaiulani_lunalilo_kalaninuiahilapalapa_cleghorn_desc:0 "Queen of the Hawaiian Islands"
+ CHARACTER_mikado_penguin:0 "Mikado Penguin"
+ CHARACTER_mikado_penguin_desc:0 "One of the great deities enshrined at Kiriya Shrine."
