--- a/localisation/english/generic/geacps_parties_l_english.yml
+++ b/localisation/english/generic/geacps_parties_l_english.yml
@@ -47,8 +47,6 @@
  PARTY_indonesia_service_association_long:0 "Indonesia Service Association"
  PARTY_southern_army_military_government:0 "Military Government"
  PARTY_southern_army_military_government_long:0 "Southern Army Military Government"
- PARTY_imperial_rule_assistance_association:0 "Taisei Yokusankai"
- PARTY_imperial_rule_assistance_association_long:0 "Imperial Rule Assistance Association"
  PARTY_choson_government-general:0 "Choson Sōtokufu"
  PARTY_choson_government-general_long:0 "Government-General of Korea"
  PARTY_national_mobilization_choson_league:0 "Korean National Mobilization League"
@@ -193,3 +191,27 @@
  PARTY_los_leoparades_long:0 "Los Leoparades"
  PARTY_american_popular_revolutionary_alliance:0 "APRA"
  PARTY_american_popular_revolutionary_alliance_long:0 "American Popular Revolutionary Alliance"
+ PARTY_communist_party_of_abkhazia:0 "Communist Party"
+ PARTY_communist_party_of_abkhazia_long:0 "Communist Party of Abkhazia"
+ PARTY_azerbaijani_democratic_party:0 "ADF"
+ PARTY_azerbaijani_democratic_party_long:0 "Azerbaijani Democratic Party"
+ PARTY_imperial_rule_assistance_political_society:0 "Yokuseikai"
+ PARTY_imperial_rule_assistance_political_society_long:0 "Imperial Rule Assistance Political Society"
+ PARTY_communist_party_of_austria:0 "KPÖ"
+ PARTY_communist_party_of_austria_long:0 "Communist Party of Austria"
+ PARTY_socialist_party_of_austria:0 "SPÖ"
+ PARTY_socialist_party_of_austria_long:0 "Socialist Party of Austria"
+ PARTY_communist_party_of_czechoslovakia:0 "KSČ"
+ PARTY_communist_party_of_czechoslovakia_long:0 "Communist Party of Czechoslovakia"
+ PARTY_communist_party_of_czechoslovakia_independence_faction:0 "KSČ (Independence)"
+ PARTY_communist_party_of_czechoslovakia_independence_faction_long:0 "Communist Party of Czechoslovakia (Independence Faction)"
+ PARTY_communist_party_of_czechoslovakia_main_faction:0 "KSČ (Main)"
+ PARTY_communist_party_of_czechoslovakia_main_faction_long:0 "Communist Party of Czechoslovakia (Main Faction)"
+ PARTY_communist_party_of_czechoslovakia_social_faction:0 "KSČ (Social)"
+ PARTY_communist_party_of_czechoslovakia_social_faction_long:0 "Communist Party of Czechoslovakia (Social Faction)"
+ PARTY_czechoslovak_peoples_party:0 "ČSL"
+ PARTY_czechoslovak_peoples_party_long:0 "Czechoslovak People's Party"
+ PARTY_republican_party_of_farmers_and_peasants:0 "RSZML"
+ PARTY_republican_party_of_farmers_and_peasants_long:0 "Republic Party of Farmers and Peasants"
+ PARTY_austrian_peoples_party:0 "ÖVP"
+ PARTY_austrian_peoples_party_long:0 "Austrian People's Party"
