--- a/localisation/english/map/geacps_autonomy_system_l_english.yml
+++ b/localisation/english/map/geacps_autonomy_system_l_english.yml
@@ -1,37 +1,54 @@
 ﻿l_english:
- integrated_puppet:0 "Integrated Puppet"
- occupied_puppet:0 "Occupied Puppet"
- puppet:0 "Puppet"
- autonomous_puppet:0 "Autonomous Puppet"
- nominal_puppet:0 "Nominal Puppet"
  overseas_territory:0 "Overseas Territory"
  colony:0 "Colony"
  dominion:0 "Dominion"
- colony_and_protectorate:0 "Colony and Protectorate"
  protected_territory:0 "Protectorate"
  protected_state:0 "Protected State"
- trust_territories:0 "Trust Territories"
  leased_territory:0 "Leased Territory"
  condominium:0 "Condominium"
- junior_partner_state:0 "Junior Partner State"
- princely_state:0 "Princely State"
  imperial_overseas_territory:0 "Imperial Overseas Territory"
- imperial_member:0 "Imperial Constituent"
  imperial_protected_state:0 "Imperial Protectorate"
- autonomous_province:0 "Autonomous Province"
- warlord:0 "Warlord"
  tributary_state:0 "Tributary State"
- us_territory:0 "Territory"
- us_commonwealth:0 "Commonwealth"
- soviet_autonomous_republic:0 "Autonomous Republic"
- soviet_member_republic:0 "Soviet Republic"
- soviet_member_federal_republic:0 "Federal Soviet Republic"
- soviet_satellite:0 "Satellite"
  occupied_territory:0 "Occupied Territory"
- junior_partner_colony:0 "Junior Partner Colony"
  mandated_territory_A:0 "Class A Mandate"
  mandated_territory_B:0 "Class B Mandate"
  mandated_territory_C:0 "Class C Mandate"
  colonies_federation:0 "Colonies Federation"
- crown_land:0 "Crown Land"
- junior_partner_protected_territory:0 "Junior Partner Protected Territory"
+ nominal_puppet_state:0 "Nominal Puppet State"
+ autonomous_puppet_state:0 "Autonomous Puppet State"
+ occupied_puppet_government:0 "Occupied Puppet Government"
+ integrated_puppet_government:0 "Integrated Puppet Government"
+ autonomous_state:1 "Autonomous State"
+ colony_and_protected_territory:0 "Colony and Protectorate"
+ viceroyalty:0 "Viceroyalty"
+ captaincy_general:0 "Captaincy General"
+ vassal_state:0 "Vassal State"
+ constituent_state:0 "Constituent State"
+ constituent_autonomous_province:0 "Constituent Autonomous Province"
+ personal_union:0 "Personal Union"
+ real_union:0 "Real Union"
+ personal_union_colony:0 "Personal Union Colony"
+ personal_union_protected_territory:0 "Personal Union Protectorate"
+ crown_dependency:0 "Crown Dependency"
+ associated_state:0 "Associated State"
+ trust_territory:0 "Trust Territory"
+ release_leased_territory:0 "Handover Leased Territory"
+ preindependence_government:0 "Preindependence Government"
+ CHI_autonomous_military_clique:0 "Chinese Autonomous Military Clique"
+ CHI_autonomous_province:0 "Chinese Autonomous Province"
+ commonwealth_realm:0 "Commonwealth Realm"
+ reichssatellitestate:0 "Satellite State"
+ reichsprotectorate:0 "Reichsprotectorate"
+ reichsgeneralgovernorate:0 "Reichsgeneralgovernorate"
+ reichskommissariat:0 "Reichskommissariat"
+ reichskolonie:0 "Reichskolonie"
+ reichsland:0 "Reichsland"
+ IND_princely_state:0 "Indian Princely State"
+ imperial_associated_state:0 "Imperial Associated State"
+ imperial_constituent_state:0 "Imperial Constituent State"
+ SOV_satellite_state:0 "Satellite State"
+ SOV_constituent_republic:0 "Constituent Republic"
+ SOV_constituent_autonomous_republic:0 "Constituent Autonomous Republic"
+ USA_commonwealth:0 "Commonwealth"
+ USA_territory:0 "Territory"
+ SOV_constituent_federative_republic:0 "Constituent Federative Republic"
