--- a/localisation/english/map/geacps_countries_cosmetic_l_english.yml
+++ b/localisation/english/map/geacps_countries_cosmetic_l_english.yml
@@ -664,3 +664,9 @@
  KRC-CHS_republic:0 "Karachay-Cherkess Republic"
  KRC-CHS_republic_DEF:0 "the Karachay-Cherkess Republic"
  KRC-CHS_republic_ADJ:0 "Kabardian-Cherkessian"
+ GERbyPRE_empire:0 "German Empire"
+ GERbyPRE_empire_DEF:0 "the German Empire"
+ GERbyPRE_empire_ADJ:0 "German"
+ GERbyPRE_reich:0 "Deutsches Reich"
+ GERbyPRE_reich_DEF:0 "the Deutsches Reich"
+ GERbyPRE_reich_ADJ:0 "German"
