--- a/localisation/english/map/geacps_countries_long_l_english.yml
+++ b/localisation/english/map/geacps_countries_long_l_english.yml
@@ -2107,3 +2107,61 @@
  ZPR_cossack_republic_DEF:0 "the Cossack Republic of Zaporizhzhia"
  ZPR_republic:0 "Republic of Zaporizhzhia"
  ZPR_republic_DEF:0 "the Republic of Zaporizhzhia"
+ EVN_republic:0 "Evenk Republic"
+ EVN_republic_DEF:0 "the Evenk Republic"
+ IRK_republic:0 "Irkutsk Republic"
+ IRK_republic_DEF:0 "the Irkutsk Republic"
+ KMV_republic:0 "Republic of Kemerovo"
+ KMV_republic_DEF:0 "the Republic of Kemerovo"
+ KRS_republic:0 "Republic of Krasnoyarsk"
+ KRS_republic_DEF:0 "the Republic of Krasnoyarsk"
+ NSB_republic:0 "Novosibirsk Republic"
+ NSB_republic_DEF:0 "the Novosibirsk Republic"
+ OMS_republic:0 "Republic of Omsk"
+ OMS_republic_DEF:0 "the Republic of Omsk"
+ TSK_republic:0 "Republic of Tomsk"
+ TSK_republic_DEF:0 "the Republic of Tomsk"
+ TYU_republic:0 "Republic of Tyumen"
+ TYU_republic_DEF:0 "the Republic of Tyumen"
+ BGL_republic:0 "Republic of Burgenland"
+ BGL_republic_DEF:0 "the Republic of Burgenland"
+ CRT_duchy:0 "Duchy of Carinthia"
+ CRT_duchy_DEF:0 "the Duchy of Carinthia"
+ CRT_republic:0 "Republic of Carinthia"
+ CRT_republic_DEF:0 "the Republic of Carinthia"
+ KRV_republic:0 "Republic of Kirov"
+ KRV_republic_DEF:0 "the Republic of Kirov"
+ LAS_archduchy:0 "Duchy of Lower Austria"
+ LAS_archduchy_DEF:0 "the Duchy of Lower Austria"
+ LAS_repbulic:0 "Republic of Lower Austria"
+ LAS_repbulic_DEF:0 "the Republic of Lower Austria"
+ ORB_republic:0 "Orenburg Republic"
+ ORB_republic_DEF:0 "the Orenburg Republic"
+ PRM_republic:0 "Perm Republic"
+ PRM_republic_DEF:0 "the Perm Republic"
+ SLZ_duchy:0 "Duchy of Salzburg"
+ SLZ_duchy_DEF:0 "the Duchy of Salzburg"
+ SLZ_republic:0 "Republic of Salzburg"
+ SLZ_republic_DEF:0 "the Republic of Salzburg"
+ SMA_republic:0 "Republic of Samara"
+ SMA_republic_DEF:0 "the Republic of Samara"
+ STY_duchy:0 "Duchy of Styria"
+ STY_duchy_DEF:0 "the Duchy of Styria"
+ STY_republic:0 "Republic of Styria"
+ STY_republic_DEF:0 "the Republic of Styria"
+ TRL_princely_county:0 "Princely County of Tyrol"
+ TRL_princely_county_DEF:0 "the Princely County of Tyrol"
+ TRL_republic:0 "Republic of Tyrol"
+ TRL_republic_DEF:0 "the Republic of Tyrol"
+ UAS_archduchy:0 "Duchy of Upper Austria"
+ UAS_archduchy_DEF:0 "the Duchy of Upper Austria"
+ UAS_repbulic:0 "Republic of Upper Austria"
+ UAS_repbulic_DEF:0 "the Republic of Upper Austria"
+ ULY_republic:0 "Republic of Ulyanovsk"
+ ULY_republic_DEF:0 "the Republic of Ulyanovsk"
+ VOR_princely_county:0 "Princely County of Vorarlberg"
+ VOR_princely_county_DEF:0 "the Princely County of Vorarlberg"
+ VOR_republic:0 "Republic of Vorarlberg"
+ VOR_republic_DEF:0 "the Republic of Vorarlberg"
+ NAF_republic:0 "Republic of North Africa"
+ NAF_republic_DEF:0 "the Republic of North Africa"
