--- a/localisation/english/map/geacps_state_names_l_english.yml
+++ b/localisation/english/map/geacps_state_names_l_english.yml
@@ -249,7 +249,7 @@
  STATE_248:0 "Yaroslav"
  STATE_249:0 "Kazan"
  STATE_250:0 "Ulyanovsk"
- STATE_251:0 "Kuibyshev"
+ STATE_251:0 "Samara"
  STATE_252:0 "Gorky"
  STATE_253:0 "Ivanovo"
  STATE_254:0 "Ryazan"
@@ -298,14 +298,14 @@
  STATE_297:0 "Equatorial Guinea"
  STATE_298:0 "Liberia"
  STATE_299:0 "Falkland Islands"
- STATE_300:0 "Uruguay"
+ STATE_300:0 "Southern Uruguay"
  STATE_301:0 "Eastern Regions"
  STATE_302:0 "Andes Highlands"
  STATE_303:0 "Northern Province"
  STATE_304:0 "Eastern Province"
- STATE_305:0 "Ecuador"
+ STATE_305:0 "Costa"
  STATE_306:0 "Lower Pacific"
- STATE_307:0 "Miranda"
+ STATE_307:0 "Caracas"
  STATE_308:0 "Leeward Islands"
  STATE_309:0 "Suriname"
  STATE_310:0 "Cayenne"
@@ -505,7 +505,7 @@
  STATE_504:0 "Iguaz"
  STATE_505:0 "Goias"
  STATE_506:0 "Norte Grande"
- STATE_507:0 "Zona Austral"
+ STATE_507:0 "Magallanes"
  STATE_508:0 "Tucuman"
  STATE_509:0 "Southern Chaco"
  STATE_510:0 "Central Regions"
@@ -685,8 +685,8 @@
  STATE_684:0 "Caroline Islands"
  STATE_685:0 "Panama Canal Zone"
  STATE_686:0 "Puerto Rico"
- STATE_687:0 "Guyana"
- STATE_688:0 "Central Chaco"
+ STATE_687:0 "Guyana Coast"
+ STATE_688:0 "Olimpo"
  STATE_689:0 "Jamaica"
  STATE_690:0 "Northern Bahamas"
  STATE_691:0 "Trinidad"
@@ -997,7 +997,7 @@
  STATE_996:0 "Western Greece"
  STATE_997:0 "Tessalia"
  STATE_998:0 "Attica"
- STATE_999:0 "Haute Normandie"
+ STATE_999:0 "Upper Normandy"
  STATE_1000:0 "Upper Franconia"
  STATE_1001:0 "Lower Franconia"
  STATE_1002:0 "Trieste"
@@ -1231,7 +1231,7 @@
  STATE_1236:0 "Bahrain"
  STATE_1237:0 "Sheperd Islands"
  STATE_1238:0 "Cape Juby"
- STATE_1239:0 "Nikolayevsk"
+ STATE_1239:0 "Bogorodskoe"
  STATE_1240:0 "Aleutian Islands"
  STATE_1241:0 "Urals"
  STATE_1242:0 "Chkalovsk"
@@ -1482,3 +1482,26 @@
  STATE_1481:0 "Cerigo"
  STATE_1482:0 "South Bucovina"
  STATE_1483:0 "Adygea"
+ STATE_1484:0 "Nikolayevsk-on-Amur"
+ STATE_1485:0 "Eastern Uruguay"
+ STATE_1486:0 "Western Uruguay"
+ STATE_1487:0 "Northern Uruguay"
+ STATE_1488:0 "Boqueron"
+ STATE_1489:0 "Presidente Hayes"
+ STATE_1490:0 "Arica y Parinacota"
+ STATE_1491:0 "Aysen"
+ STATE_1492:0 "Chiloé Islands"
+ STATE_1493:0 "Tumbes"
+ STATE_1494:0 "Oriente"
+ STATE_1495:0 "Tigri"
+ STATE_1496:0 "Sipaliwini"
+ STATE_1497:0 "Esequiba Coast"
+ STATE_1498:0 "Guyana Highlands"
+ STATE_1499:0 "Berbice-Corentyne"
+ STATE_1500:0 "Delta Amacuro"
+ STATE_1501:0 "Amazonas"
+ STATE_1502:0 "Eastern Venezuela"
+ STATE_1503:0 "Guarico"
+ STATE_1504:0 "Apure"
+ STATE_1505:0 "Middle Venezuela"
+ STATE_1506:0 "Venezuelan Andes"
