--- a/localisation/english/map/geacps_state_names_native_l_english.yml
+++ b/localisation/english/map/geacps_state_names_native_l_english.yml
@@ -422,8 +422,7 @@
  STATE_1185_ch:0 "Nankan"
  STATE_1222_en:0 "Snake Island"
  STATE_1233_en:0 "St. Barts Island"
- STATE_1239_ch:0 "Miaojie"
- STATE_1239_ru:0 "Nikolaevsk-na-Amur"
+ STATE_1239_ch:0 "Qiankan"
  STATE_1257_fr:0 "Delta du Mekong"
  STATE_1318_ch:0 "Daziquanyi"
  STATE_1319_ch:0 "West Hāngī"
@@ -459,3 +458,15 @@
  STATE_1431_en:0 "Singapore Island"
  STATE_1431_ja:0 "Shingaporu-to"
  STATE_1431_ja_empire:0 "Shōnan-to"
+ STATE_251_ru_soviet:0 "Kuybyshev"
+ STATE_999_en:0 "Upper Normandy"
+ STATE_999_fr:0 "Haute-Normandie"
+ STATE_1239_ja:0 "Mamiya"
+ STATE_1469_ch:0 "Jalaid"
+ STATE_1470_ch:0 "Hsing'an"
+ STATE_1471_ch:0 "Tongliao"
+ STATE_1472_ch:0 "Holingol"
+ STATE_1473_ch:0 "Chifeng"
+ STATE_1484_ch:0 "Miaojie"
+ STATE_1484_ja:0 "Niko"
+ STATE_1484_ru_monarchy:0 "Nikolayevsk"
