--- a/localisation/english/map/geacps_victory_points_l_english.yml
+++ b/localisation/english/map/geacps_victory_points_l_english.yml
@@ -1044,7 +1044,7 @@
  VICTORY_POINTS_7574:0 "Raipur"
  VICTORY_POINTS_7656:0 "Kaifeng"
  VICTORY_POINTS_7663:0 "Jilin"
- VICTORY_POINTS_7868:0 "Nikolayevsk"
+ VICTORY_POINTS_7868:0 "Mamiya"
  VICTORY_POINTS_7897:0 "Bei'an"
  VICTORY_POINTS_7903:0 "Rahimyar Khan"
  VICTORY_POINTS_8007:0 "Bahawalpur"
@@ -1151,3 +1151,5 @@
  VICTORY_POINTS_12723:0 "Biscia"
  VICTORY_POINTS_13250:0 "Asmara"
  VICTORY_POINTS_5097:0 "Dessie"
+ VICTORY_POINTS_855:0 "Oha"
+ VICTORY_POINTS_12559:0 "Niko"
