--- a/localisation/japanese/map/geacps_countries_autonomy_GBR_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_autonomy_GBR_l_japanese.yml
@@ -6,36 +6,20 @@
 ##バニラ国家
 #アジア
 #アフリカ
- SAF_dominion:0 "$NONIDEOLOGY$連邦"
- SAF_dominion_DEF:0 "$NONIDEOLOGY$連邦"
- 
 ##コズメティックタグ
 #アジア
  STRAITS_GBRbyENG_colony:0 "$OVERLORDADJ$領海峡植民地"
  STRAITS_GBRbyENG_colony_DEF:0 "$OVERLORDADJ$領海峡植民地"
- STRAITS_GBRbyENG_colony_ADJ:0 "$OVERLORDADJ$領海峡植民地"
+ STRAITS_GBRbyENG_colony_ADJ:0 "海峡植民地"
  
 #アフリカ
  CMR_GBRbyENG_mandated_territory_B:0 "$OVERLORDADJ$委任統治領カメルーン地域"
  CMR_GBRbyENG_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領カメルーン地域"
- CMR_GBRbyENG_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領カメルーン"
- CMR_GBRbyENG_mandated_territory_C:0 "$OVERLORDADJ$委任統治領カメルーン地域"
- CMR_GBRbyENG_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領カメルーン地域"
- CMR_GBRbyENG_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領カメルーン"
+ CMR_GBRbyENG_mandated_territory_B_ADJ:0 "カメルーン"
  
  SAF_union_dominion:0 "南アフリカ連合"
  SAF_union_dominion_DEF:0 "南アフリカ連合"
  SAF_union_dominion_ADJ:0 "南アフリカ"
- 
- SUD_ENG-EGY:0 "イングランド・エジプト共同統治領スーダン"
- SUD_ENG-EGY_DEF:0 "イングランド・エジプト共同統治領スーダン"
- SUD_ENG-EGY_ADJ:0 "イングランド・エジプト領スーダン"
- SUD_GBRbyENG-EGY:0 "イギリス・エジプト共同統治領スーダン"
- SUD_GBRbyENG-EGY_DEF:0 "イギリス・エジプト共同統治領スーダン"
- SUD_GBRbyENG-EGY_ADJ:0 "イギリス・エジプト領スーダン"
- SUD_GBRandIREbyENG-EGY:0 "イギリス・エジプト共同統治領スーダン"
- SUD_GBRandIREbyENG-EGY_DEF:0 "イギリス・エジプト共同統治領スーダン"
- SUD_GBRandIREbyENG-EGY_ADJ:0 "イギリス・エジプト領スーダン"
  
 #大洋州
  AST_commonwealth_GBRbyENG_dominion:0 "オーストラリア連邦"
