--- a/localisation/english/generic/geacps_ideologies_l_english.yml
+++ b/localisation/english/generic/geacps_ideologies_l_english.yml
@@ -1,19 +1,19 @@
 ﻿l_english:
  total_socialism:0 "Totalitarian Socialism"
  total_socialism_noun:0 "Totalitarian Socialism"
- total_socialism_desc:0 "Totalitarian Regime"
+ total_socialism_desc:0 "Totalitarian Socialism Regime"
  radical_socialism:0 "Radical Socialism"
  radical_socialism_noun:0 "Radical Socialism"
- radical_socialism_desc:0 "Totalitarian Regime"
+ radical_socialism_desc:0 "Radical Socialism Regime"
  social_democracy:0 "Social Democracy"
  social_democracy_noun:0 "Social Democracy"
- social_democracy_desc:0 "Democratic Regime"
+ social_democracy_desc:0 "Social Democratic Regime"
  authoritative_democracy:0 "Authoritarian Democracy"
  authoritative_democracy_noun:0 "Authoritarian Democracy"
- authoritative_democracy_desc:0 "Democratic Regime"
+ authoritative_democracy_desc:0 "Authoritarian Democratic Regime"
  national_populism:0 "National Populism"
  national_populism_noun:0 "National Populism"
- national_populism_desc:0 "Totalitarian Regime"
+ national_populism_desc:0 "National Populism Regime"
  total_socialism_drift:0 "Daily Totalitarian Socialism support"
  radical_socialism_drift:0 "Daily Radical Socialism support"
  social_democracy_drift:0 "Daily Social Democracy support"
@@ -32,14 +32,14 @@
  social_democracy_ideology_desc:0 ""
  liberal_democracy:0 "Liberal Democracy"
  liberal_democracy_noun:0 "Liberal Democracy"
- liberal_democracy_desc:0 "Democratic Regime"
+ liberal_democracy_desc:0 "Liberal Democratic Regime"
  liberal_democracy_drift:0 "Daily Liberal Democracy support"
  liberal_democracy_acceptance:0 "Acceptance of Liberal Democratic diplomacy"
  liberal_democracy_ideology:0 "Liberal Democracy"
  liberal_democracy_ideology_desc:0 ""
  conservative_democracy:0 "Conservative Democracy"
  conservative_democracy_noun:0 "Conservative Democracy"
- conservative_democracy_desc:0 "Democratic Regime"
+ conservative_democracy_desc:0 "Conservative Democratic Regime"
  conservative_democracy_drift:0 "Daily Conservative Democracy support"
  conservative_democracy_acceptance:0 "Acceptance of Conservative Democratic diplomacy"
  conservative_democracy_ideology:0 "Conservative Democracy"
@@ -48,7 +48,7 @@
  authoritative_democracy_ideology_desc:0 ""
  national_authoritarianism:0 "National Authoritarianism"
  national_authoritarianism_noun:0 "National Authoritarianism"
- national_authoritarianism_desc:0 "Totalitarian Regime"
+ national_authoritarianism_desc:0 "National Authoritarianism Regime"
  national_authoritarianism_drift:0 "Daily National Authoritarianism support"
  national_authoritarianism_acceptance:0 "Acceptance of National Authoritarian diplomacy"
  national_authoritarianism_ideology:0 "National Authoritarianism"
@@ -75,3 +75,27 @@
  authoritarian_conservatism_ideology_desc:0 ""
  francoism_ideology:0 "Francoism"
  francoism_ideology_desc:0 "Francoism encompasses aspects of authoritarianism, nationalism, national Catholicism, monarchism, militarism and national conservatism; while being strongly anti-communist, anti-freemasonry, anti-Catalan, anti-liberal and pan-Hispanic."
+ total_socialism_ideology_trait:0 "Total Socialist"
+ bukharinism_ideology_trait:0 "Bukharinist"
+ maoism_ideology_trait:0 "Maoist"
+ marxism-leninism_ideology_trait:0 "Marxist-Leninist"
+ stalinism_ideology_trait:0 "Stalinist"
+ trotskyism_ideology_trait:0 "Trotskyist"
+ radical_socialism_ideology_trait:0 "Radical Socialist"
+ social_democracy_ideology_trait:0 "Social Democrat"
+ liberal_democracy_ideology_trait:0 "Liberal Democrat"
+ conservative_liberalism_ideology_trait:0 "Conservative Liberalist"
+ conservative_democracy_ideology_trait:0 "Conservative Democrat"
+ christian_democracy_ideology_trait:0 "Christian Democrat"
+ authoritative_democracy_ideology_trait:0 "Authoritarian Democrat"
+ authoritarian_conservatism_ideology_trait:0 "Authoritarian Conservatist"
+ provisional_government_ideology:0 "Provisional Government"
+ provisional_government_ideology_desc:0 ""
+ provisional_government_ideology_trait:0 "Provisional Government Faction"
+ national_authoritarianism_ideology_trait:0 "National Authoritarianist"
+ colonial_government_ideology:0 "Colonial Government"
+ colonial_government_ideology_desc:0 ""
+ colonial_government_ideology_trait:0 "Colonial Government Faction"
+ national_populism_ideology_trait:0 "National Populist"
+ francoism_ideology_trait:0 "Francoist"
+ national_socialism_ideology_trait:0 "National Socialist"
