--- a/localisation/english/map/geacps_countries_autonomy_SOV_l_english.yml
+++ b/localisation/english/map/geacps_countries_autonomy_SOV_l_english.yml
@@ -1,21 +1,13 @@
-﻿l_japanese:
-##汎用
- COUNTRY_SOV_federative_republic:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$連邦共和国"
- COUNTRY_SOV_federative_republic_DEF:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$連邦共和国"
- COUNTRY_SOV_federative_socialist_republic:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$連邦社会主義共和国"
- COUNTRY_SOV_federative_socialist_republic_DEF:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$連邦社会主義共和国"
- COUNTRY_SOV_republic:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$共和国"
- COUNTRY_SOV_republic_DEF:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$共和国"
- COUNTRY_SOV_socialist_republic:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$社会主義共和国"
- COUNTRY_SOV_socialist_republic_DEF:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$社会主義共和国"
- COUNTRY_autonomous_SOV_republic:0 "$NONIDEOLOGYADJ$自治$OVERLORDADJ$共和国"
- COUNTRY_autonomous_SOV_republic_DEF:0 "$NONIDEOLOGYADJ$自治$OVERLORDADJ$共和国"
- COUNTRY_autonomous_SOV_socialist_republic:0 "$NONIDEOLOGYADJ$自治$OVERLORDADJ$社会主義共和国"
- COUNTRY_autonomous_SOV_socialist_republic_DEF:0 "$NONIDEOLOGYADJ$自治$OVERLORDADJ$社会主義共和国"
- COUNTRY_SOV_ADJ:0 "$OVERLORDADJ$・$NONIDEOLOGY$"
- 
-##バニラ国家
-#アジア
+﻿l_english:
+ COUNTRY_SOV_republic:0 "$NONIDEOLOGYADJ$ $OVERLORDADJ$ Republic"
+ COUNTRY_SOV_republic_DEF:0 "the $NONIDEOLOGYADJ$ $OVERLORDADJ$ Republic"
+ COUNTRY_SOV_socialist_republic:0 "$NONIDEOLOGYADJ$ $OVERLORDADJ$ Socialist Republic"
+ COUNTRY_SOV_socialist_republic_DEF:0 "the $NONIDEOLOGYADJ$ $OVERLORDADJ$ Socialist Republic"
+ COUNTRY_autonomous_SOV_republic:0 "$NONIDEOLOGYADJ$ Autonomous $OVERLORDADJ$ Republic"
+ COUNTRY_autonomous_SOV_republic_DEF:0 "the $NONIDEOLOGYADJ$ Autonomous $OVERLORDADJ$ Republic"
+ COUNTRY_autonomous_SOV_socialist_republic:0 "$NONIDEOLOGYADJ$ Autonomous $OVERLORDADJ$ Socialist Republic"
+ COUNTRY_autonomous_SOV_socialist_republic_DEF:0 "the $NONIDEOLOGYADJ$ Autonomous $OVERLORDADJ$ Socialist Republic"
+ COUNTRY_SOV_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
  ABK_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  ABK_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  ABK_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -30,23 +22,20 @@
  ABK_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  ABK_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  ABK_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
- KAZ_SOV_constituent_republic:0 "カザフ・$OVERLORDADJ$共和国"
- KAZ_SOV_constituent_republic_DEF:0 "カザフ・$OVERLORDADJ$共和国"
- KAZ_total_socialism_SOV_constituent_republic:0 "カザフ・$OVERLORDADJ$社会主義共和国"
- KAZ_total_socialism_SOV_constituent_republic_DEF:0 "カザフ・$OVERLORDADJ$社会主義共和国"
- KAZ_radical_socialism_SOV_constituent_republic:0 "カザフ・$OVERLORDADJ$社会主義共和国"
- KAZ_radical_socialism_SOV_constituent_republic_DEF:0 "カザフ・$OVERLORDADJ$社会主義共和国"
- KAZ_SOV_constituent_republic_ADJ:0 "$OVERLORDADJ$・カザフ"
- KAZ_SOV_constituent_autonomous_republic:0 "カザフ自治$OVERLORDADJ$共和国"
- KAZ_SOV_constituent_autonomous_republic_DEF:0 "カザフ自治$OVERLORDADJ$共和国"
- KAZ_total_socialism_SOV_constituent_autonomous_republic:0 "カザフ自治$OVERLORDADJ$社会主義共和国"
- KAZ_total_socialism_SOV_constituent_autonomous_republic_DEF:0 "カザフ自治$OVERLORDADJ$社会主義共和国"
- KAZ_radical_socialism_SOV_constituent_autonomous_republic:0 "カザフ自治$OVERLORDADJ$社会主義共和国"
- KAZ_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "カザフ自治$OVERLORDADJ$社会主義共和国"
- KAZ_SOV_constituent_autonomous_republic_ADJ:0 "$OVERLORDADJ$・カザフ"
- 
-#ヨーロッパ
+ KAZ_SOV_constituent_republic:0 "Kazak $OVERLORDADJ$ Republic"
+ KAZ_SOV_constituent_republic_DEF:0 "the Kazak $OVERLORDADJ$ Republic"
+ KAZ_total_socialism_SOV_constituent_republic:0 "Kazak $OVERLORDADJ$ Socialist Republic"
+ KAZ_total_socialism_SOV_constituent_republic_DEF:0 "the Kazak $OVERLORDADJ$ Socialist Republic"
+ KAZ_radical_socialism_SOV_constituent_republic:0 "Kazak $OVERLORDADJ$ Socialist Republic"
+ KAZ_radical_socialism_SOV_constituent_republic_DEF:0 "the Kazak $OVERLORDADJ$ Socialist Republic"
+ KAZ_SOV_constituent_republic_ADJ:0 "$OVERLORDADJ$ Kazak"
+ KAZ_SOV_constituent_autonomous_republic:0 "Kazak Autonomous $OVERLORDADJ$ Republic"
+ KAZ_SOV_constituent_autonomous_republic_DEF:0 "the Kazak Autonomous $OVERLORDADJ$ Republic"
+ KAZ_total_socialism_SOV_constituent_autonomous_republic:0 "Kazak Autonomous $OVERLORDADJ$ Socialist Republic"
+ KAZ_total_socialism_SOV_constituent_autonomous_republic_DEF:0 "the Kazak Autonomous $OVERLORDADJ$ Socialist Republic"
+ KAZ_radical_socialism_SOV_constituent_autonomous_republic:0 "Kazak Autonomous $OVERLORDADJ$ Socialist Republic"
+ KAZ_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "the Kazak Autonomous $OVERLORDADJ$ Socialist Republic"
+ KAZ_SOV_constituent_autonomous_republic_ADJ:0 "$OVERLORDADJ$ Kazak"
  BLR_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  BLR_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  BLR_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -61,7 +50,6 @@
  BLR_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  BLR_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  BLR_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
  EST_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  EST_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  EST_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -76,7 +64,6 @@
  EST_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  EST_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  EST_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
  KAR_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  KAR_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  KAR_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -91,7 +78,6 @@
  KAR_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  KAR_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  KAR_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
  LAT_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  LAT_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  LAT_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -106,7 +92,6 @@
  LAT_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  LAT_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  LAT_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
  LIT_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  LIT_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  LIT_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -121,7 +106,6 @@
  LIT_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  LIT_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  LIT_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
  MOL_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  MOL_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  MOL_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -136,7 +120,6 @@
  MOL_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  MOL_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  MOL_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
  UKR_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  UKR_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  UKR_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -151,16 +134,6 @@
  UKR_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  UKR_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  UKR_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
-##追加国家
-#ヨーロッパ
- RUS_SOV_constituent_federative_republic:0 "$COUNTRY_SOV_federative_republic$"
- RUS_SOV_constituent_federative_republic_DEF:0 "$COUNTRY_SOV_federative_republic_DEF$"
- RUS_total_socialism_SOV_constituent_federative_republic:0 "$COUNTRY_SOV_federative_socialist_republic$"
- RUS_total_socialism_SOV_constituent_federative_republic_DEF:0 "$COUNTRY_SOV_federative_socialist_republic_DEF$"
- RUS_radical_socialism_SOV_constituent_federative_republic:0 "$COUNTRY_SOV_federative_socialist_republic$"
- RUS_radical_socialism_SOV_constituent_federative_republic_DEF:0 "$COUNTRY_SOV_federative_socialist_republic$"
- RUS_SOV_constituent_federative_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
  RUS_SOV_constituent_republic:0 "$COUNTRY_SOV_republic$"
  RUS_SOV_constituent_republic_DEF:0 "$COUNTRY_SOV_republic_DEF$"
  RUS_total_socialism_SOV_constituent_republic:0 "$COUNTRY_SOV_socialist_republic$"
@@ -175,20 +148,28 @@
  RUS_radical_socialism_SOV_constituent_autonomous_republic:0 "$COUNTRY_autonomous_SOV_socialist_republic$"
  RUS_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "$COUNTRY_autonomous_SOV_socialist_republic_DEF$"
  RUS_SOV_constituent_autonomous_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
- 
-##コズメティックタグ
-#ヨーロッパ
- KAR-FIN_SOV_SOV_constituent_republic:0 "カレロ＝フィン・$OVERLORDADJ$共和国"
- KAR-FIN_SOV_SOV_constituent_republic_DEF:0 "カレロ＝フィン・$OVERLORDADJ$共和国"
- KAR-FIN_SOV_total_socialism_SOV_constituent_republic:0 "カレロ＝フィン・$OVERLORDADJ$社会主義共和国"
- KAR-FIN_SOV_total_socialism_SOV_constituent_republic_DEF:0 "カレロ＝フィン・$OVERLORDADJ$社会主義共和国"
- KAR-FIN_SOV_radical_socialism_SOV_constituent_republic:0 "カレロ＝フィン・$OVERLORDADJ$社会主義共和国"
- KAR-FIN_SOV_radical_socialism_SOV_constituent_republic_DEF:0 "カレロ＝フィン・$OVERLORDADJ$社会主義共和国"
- KAR-FIN_SOV_SOV_constituent_republic_ADJ:0 "$OVERLORDADJ$・カレロ＝フィン"
- KAR-FIN_SOV_SOV_constituent_autonomous_republic:0 "カレロ＝フィン自治$OVERLORDADJ$共和国"
- KAR-FIN_SOV_SOV_constituent_autonomous_republic_DEF:0 "カレロ＝フィン自治$OVERLORDADJ$共和国"
- KAR-FIN_SOV_total_socialism_SOV_constituent_autonomous_republic:0 "カレロ＝フィン自治$OVERLORDADJ$社会主義共和国"
- KAR-FIN_SOV_total_socialism_SOV_constituent_autonomous_republic_DEF:0 "カレロ＝フィン自治$OVERLORDADJ$社会主義共和国"
- KAR-FIN_SOV_radical_socialism_SOV_constituent_autonomous_republic:0 "カレロ＝フィン自治$OVERLORDADJ$社会主義共和国"
- KAR-FIN_SOV_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "カレロ＝フィン自治$OVERLORDADJ$社会主義共和国"
- KAR-FIN_SOV_SOV_constituent_autonomous_republic_ADJ:0 "$OVERLORDADJ$・カレロ＝フィン"
+ KAR-FIN_SOV_SOV_constituent_republic:0 "Karelo-Finnish $OVERLORDADJ$ Republic"
+ KAR-FIN_SOV_SOV_constituent_republic_DEF:0 "the Karelo-Finnish $OVERLORDADJ$ Republic"
+ KAR-FIN_SOV_total_socialism_SOV_constituent_republic:0 "Karelo-Finnish $OVERLORDADJ$ Socialist Republic"
+ KAR-FIN_SOV_total_socialism_SOV_constituent_republic_DEF:0 "the Karelo-Finnish $OVERLORDADJ$ Socialist Republic"
+ KAR-FIN_SOV_radical_socialism_SOV_constituent_republic:0 "Karelo-Finnish $OVERLORDADJ$ Socialist Republic"
+ KAR-FIN_SOV_radical_socialism_SOV_constituent_republic_DEF:0 "the Karelo-Finnish $OVERLORDADJ$ Socialist Republic"
+ KAR-FIN_SOV_SOV_constituent_republic_ADJ:0 "$OVERLORDADJ$ Karelo-Finnish"
+ KAR-FIN_SOV_SOV_constituent_autonomous_republic:0 "Karelo-Finnish Autonomous $OVERLORDADJ$ Republic"
+ KAR-FIN_SOV_SOV_constituent_autonomous_republic_DEF:0 "the Karelo-Finnish Autonomous $OVERLORDADJ$ Republic"
+ KAR-FIN_SOV_total_socialism_SOV_constituent_autonomous_republic:0 "Karelo-Finnish Autonomous $OVERLORDADJ$ Socialist Republic"
+ KAR-FIN_SOV_total_socialism_SOV_constituent_autonomous_republic_DEF:0 "the Karelo-Finnish Autonomous $OVERLORDADJ$ Socialist Republic"
+ KAR-FIN_SOV_radical_socialism_SOV_constituent_autonomous_republic:0 "Karelo-Finnish Autonomous $OVERLORDADJ$ Socialist Republic"
+ KAR-FIN_SOV_radical_socialism_SOV_constituent_autonomous_republic_DEF:0 "the Karelo-Finnish Autonomous $OVERLORDADJ$ Socialist Republic"
+ KAR-FIN_SOV_SOV_constituent_autonomous_republic_ADJ:0 "$OVERLORDADJ$ Karelo-Finnish"
+ RUS_SOV_constituent_federative_republic:0 "$COUNTRY_SOV_federative_republic$"
+ RUS_SOV_constituent_federative_republic_DEF:0 "$COUNTRY_SOV_federative_republic_DEF$"
+ RUS_total_socialism_SOV_constituent_federative_republic:0 "$COUNTRY_SOV_federative_socialist_republic$"
+ RUS_total_socialism_SOV_constituent_federative_republic_DEF:0 "$COUNTRY_SOV_federative_socialist_republic_DEF$"
+ RUS_radical_socialism_SOV_constituent_federative_republic:0 "$COUNTRY_SOV_federative_socialist_republic$"
+ RUS_radical_socialism_SOV_constituent_federative_republic_DEF:0 "$COUNTRY_SOV_federative_socialist_republic$"
+ RUS_SOV_constituent_federative_republic_ADJ:0 "$COUNTRY_SOV_ADJ$"
+ COUNTRY_SOV_federative_republic:0 "$NONIDEOLOGYADJ$ $OVERLORDADJ$ Federative Republic"
+ COUNTRY_SOV_federative_republic_DEF:0 "the $NONIDEOLOGYADJ$ $OVERLORDADJ$ Federative Republic"
+ COUNTRY_SOV_federative_socialist_republic:0 "$NONIDEOLOGYADJ$ $OVERLORDADJ$ Federative Socialist Republic"
+ COUNTRY_SOV_federative_socialist_republic_DEF:0 "the $NONIDEOLOGYADJ$ $OVERLORDADJ$ Federative Socialist Republic"
