ローカライゼーション

--- a/localisation/english/generic/geacps_characters_l_english.yml
+++ b/localisation/english/generic/geacps_characters_l_english.yml
@@ -60,7 +60,7 @@
  CHARACTER_kuniaki_koiso:0 "Kuniaki Koiso"
  CHARACTER_nobuyoshi_muto:0 "Nobuyoshi Muto"
  CHARACTER_nobuyuki_abe:0 "Nobuyuki Abe"
- CHARACTER_nobuyuki_abe_desc:0 "Nobuyuki Abe, Japanese soldier and politician.\nIJA Academy 9th ​​class, Army War College 19th class. Second-rank Army General. Grand Cordon of the Order of the Rising Sun 1st Class.\nAfter being moved to the Reserves, he served as Prime Minister, Foreign Minister, Yokusan Seijikai Chairman, member of the House of Peers, and Governor-General of Korea."
+ CHARACTER_nobuyuki_abe_desc:0 "Nobuyuki Abe, Japanese soldier and politician.\nIJA Academy 9th class, Army War College 19th class. Second-rank Army General. Grand Cordon of the Order of the Rising Sun 1st Class.\nAfter being moved to the Reserves, he served as Prime Minister, Foreign Minister, Yokusan Seijikai Chairman, member of the House of Peers, and Governor-General of Korea."
  CHARACTER_otozo_yamada:0 "Otozo Yamada"
  CHARACTER_otozo_yamada_desc:0 "Special Ambassador and Plenipotentiary to Manchuria, Commander of the Kwantung Army"
  CHARACTER_rikichi_ando:0 "Rikichi Ando"
@@ -496,8 +496,8 @@
  CHARACTER_arthur_werner:0 "Arthur Werner"
  CHARACTER_arthur_victor_hugo_werner:0 "Arthur Victor Hugo Werner"
  CHARACTER_arthur_victor_hugo_werner_desc:0 "Governing Mayor of Berlin"
- CHARACTER_kaiulani:0 "Kaʻiulani"
- CHARACTER_victoria_kawekiu_kaiulani_lunalilo_kalaninuiahilapalapa_cleghorn:0 "Victoria Kawēkiu Kaʻiulani Lunalilo Kalaninuiahilapalapa Cleghorn"
+ CHARACTER_kaiulani:0 "Ka'iulani"
+ CHARACTER_victoria_kawekiu_kaiulani_lunalilo_kalaninuiahilapalapa_cleghorn:0 "Victoria Kawēkiu Ka'iulani Lunalilo Kalaninuiahilapalapa Cleghorn"
  CHARACTER_victoria_kawekiu_kaiulani_lunalilo_kalaninuiahilapalapa_cleghorn_desc:0 "Queen of the Hawaiian Islands"
  CHARACTER_mikado_penguin:0 "Mikado Penguin"
  CHARACTER_mikado_penguin_desc:0 "One of the great deities enshrined at Kiriya Shrine."
