--- a/localisation/english/map/geacps_countries_long_l_english.yml
+++ b/localisation/english/map/geacps_countries_long_l_english.yml
@@ -1941,8 +1941,8 @@
  FNG_soviet_government_DEF:0 "the Soviet Government of Fengtian"
  GOA_free_city:0 "Free City of Goa"
  GOA_free_city_DEF:0 "the Free City of Goa"
- HIL_emirate:0 "Emirate of Haʾil"
- HIL_emirate_DEF:0 "the Emirate of Haʾil"
+ HIL_emirate:0 "Emirate of Ha'il"
+ HIL_emirate_DEF:0 "the Emirate of Ha'il"
  INO_federation:0 "Federation of Indian Ocean"
  INO_federation_DEF:0 "the Federation of Indian Ocean"
  KFT_republic:0 "Republic of Karafuto"
