実験的追加

--- a/localisation/japanese/map/geacps_countries_autonomy_JAP_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_autonomy_JAP_l_japanese.yml
@@ -157,6 +157,13 @@
  EZO_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領蝦夷"
  EZO_imperial_overseas_territory_ADJ:0 "蝦夷"
  
+ RYU_imperial_constituent_state:0 "$OVERLORDADJ$領琉球王国"
+ RYU_imperial_constituent_state_DEF:0 "$OVERLORDADJ$領琉球王国"
+ RYU_imperial_constituent_state_ADJ:0 "蝦夷"
+ RYU_imperial_overseas_territory:0 "$OVERLORDADJ$領沖縄"
+ RYU_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領沖縄"
+ RYU_imperial_overseas_territory_ADJ:0 "沖縄"
+ 
  TWN_imperial_constituent_state:0 "$OVERLORDADJ$領台湾王国"
  TWN_imperial_constituent_state_DEF:0 "$OVERLORDADJ$領台湾王国"
  TWN_imperial_constituent_state_ADJ:0 "台湾"
