国家タグの追加

--- a/localisation/japanese/map/geacps_countries_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_l_japanese.yml
@@ -1224,9 +1224,17 @@
  JIA_DEF:0 "江西"
  JIA_ADJ:0 "江西"
  
+ JNA:0 "ジュナーガド"
+ JNA_DEF:0 "ジュナーガド"
+ JNA_ADJ:0 "ジュナーガド"
+ 
  JOH:0 "ジョホール"
  JOH_DEF:0 "ジョホール"
  JOH_ADJ:0 "ジョホール"
+ 
+ JRS:0 "エルサレム"
+ JRS_DEF:0 "エルサレム"
+ JRS_ADJ:0 "エルサレム"
  
  KAC:0 "カチン"
  KAC_DEF:0 "カチン"
