--- a/localisation/japanese/map/geacps_countries_long_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_long_l_japanese.yml
@@ -1618,10 +1618,20 @@
  JIA_soviet_government:0 "江西ソビエト政府"
  JIA_soviet_government_DEF:0 "江西ソビエト政府"
  
+ JNA_kingdom:0 "ジュナーガド王国"
+ JNA_kingdom_DEF:0 "ジュナーガド王国"
+ JNA_republic:0 "ジュナーガド共和国"
+ JNA_republic_DEF:0 "ジュナーガド共和国"
+ 
  JOH_republic:0 "ジョホール共和国"
  JOH_republic_DEF:0 "ジョホール共和国"
  JOH_sultanate:0 "ジョホール・スルタン国"
  JOH_sultanate_DEF:0 "ジョホール・スルタン国"
+ 
+ JRS_holy_city:0 "神聖なる都市エルサレム"
+ JRS_holy_city_DEF:0 "神聖なる都市エルサレム"
+ JRS_kingdom:0 "エルサレム王国"
+ JRS_kingdom_DEF:0 "エルサレム王国"
  
  KAC_republic:0 "カチン共和国"
  KAC_republic_DEF:0 "カチン共和国"
