--- a/localisation/japanese/generic/geacps_release_country_gui_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_release_country_gui_l_japanese.yml
@@ -11,7 +11,7 @@
   pfk_popup:0 "国家解放"
   pfk_popup_desc:0 "以下の通りに開放しますか?\n[?pfk_setting_list^0.GetNonIdeologyNameDef][?pfk_setting_list^2.GetTokenLocalizedKey]を[?pfk_setting_list^1.GetTokenLocalizedKey]として解放"
 #自治度
-  pfk_method_puppet:0 "傀儡国"
+  pfk_method_puppet:0 "[pfk_puppet_name]"
   pfk_method_protected_state:0 "保護国"
   pfk_method_colony:0 "植民地"
   pfk_method_colony_JAP:0 "外地"
@@ -66,6 +66,22 @@
   cossack_republic:0 "コサック共和国"
   most_serene_commonwealth:0 "晴朗極まる共和国"
   anarchist_federation:0 "アナーキスト連盟"
+  imamate:0 "イマーム国"
+  grand_duchy:0 "大公国"
+  county:0 "伯国"
+  princely_county:0 "諸侯伯国"
+  margraviate:0 "辺境伯国"
+  regency:0 "摂政国"
+  democratic_peoples_republic:0 "民主人民共和国"
+  socialist_republic:0 "社会主義共和国"
+  most_serene_republic:0 "晴朗極まる共和国"
+  united_provinces:0 "諸州連合"
+  republics_union:0 "共和国連邦"
+  socialist_republics_union:0 "社会主義共和国連邦"
+  united_tribes:0 "部族連合"
+  confederacy:0 "連邦"
+  democratic_federative_republic:0 "民主連邦共和国"
+  international_settlement:0 "共同租界"
 
 #解放範囲
 	pfk_state_array_1:0 "最も基本的な範囲"
