日本における軍閥の忠誠と支持率の表示と数値の変更

--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -98,26 +98,32 @@
  JAP_ui_loyalty_header:0 "Loyalty"
  JAP_ui_popularity_header:0 "Popularity"
  JAP_a_royal_visit:0 "Imperial Visit from His Majesty"
- JAP_zveno_loyalty_status:0 "[GetZvenoLoyaltyStatus]"
- JAP_zveno_loyalty_status_amount:0 "[?JAP.JAP_zveno_loyalty|0]"
- JAP_bs_loyalty_status:0 "[GetBsLoyaltyStatus]"
- JAP_bs_loyalty_status_amount:0 "[?JAP.JAP_bs_loyalty|0]"
- JAP_bzns_loyalty_status:0 "[GetBznsLoyaltyStatus]"
- JAP_bzns_loyalty_status_amount:0 "[?JAP.JAP_bzns_loyalty|0]"
- JAP_nsm_loyalty_status:0 "[GetNsmLoyaltyStatus]"
- JAP_nsm_loyalty_status_amount:0 "[?JAP.JAP_nsm_loyalty|0]"
- JAP_zveno_popularity_status:0 "[GetZvenoPopularityStatus]"
- JAP_zveno_popularity_status_amount:0 "[?JAP.JAP_zveno_popularity|0]"
- JAP_bs_popularity_status:0 "[GetBsPopularityStatus]"
- JAP_bs_popularity_status_amount:0 "[?JAP.JAP_bs_popularity|0]"
- JAP_bzns_popularity_status:0 "[GetBznsPopularityStatus]"
- JAP_bzns_popularity_status_amount:0 "[?JAP.JAP_bzns_popularity|0]"
- JAP_nsm_popularity_status:0 "[GetNsmPopularityStatus]"
- JAP_nsm_popularity_status_amount:0 "[?JAP.JAP_nsm_popularity|0]"
+ 
+ ####################################################################################################
+ 
+ JAP_toseiha_loyalty_status:0 "[GettoseihaLoyaltyStatus]"
+ JAP_toseiha_loyalty_status_amount:0 "[?JAP.JAP_toseiha_loyalty|0]"
+ JAP_kodoha_loyalty_status:0 "[GetkodohaLoyaltyStatus]"
+ JAP_kodoha_loyalty_status_amount:0 "[?JAP.JAP_kodoha_loyalty|0]"
+ JAP_fleet_faction_loyalty_status:0 "[GetfleetfactionLoyaltyStatus]"
+ JAP_fleet_faction_loyalty_status_amount:0 "[?JAP.JAP_fleet_faction_loyalty|0]"
+ JAP_treaty_faction_loyalty_status:0 "[GettreatyfactionLoyaltyStatus]"
+ JAP_treaty_faction_loyalty_status_amount:0 "[?JAP.JAP_treaty_faction_loyalty|0]"
+ JAP_toseiha_popularity_status:0 "[GettoseihaPopularityStatus]"
+ JAP_toseiha_popularity_status_amount:0 "[?JAP.JAP_toseiha_popularity|0]"
+ JAP_kodoha_popularity_status:0 "[GetkodohaPopularityStatus]"
+ JAP_kodoha_popularity_status_amount:0 "[?JAP.JAP_kodoha_popularity|0]"
+ JAP_fleet_faction_popularity_status:0 "[GetfleetfactionPopularityStatus]"
+ JAP_fleet_faction_popularity_status_amount:0 "[?JAP.JAP_fleet_faction_popularity|0]"
+ JAP_treaty_faction_popularity_status:0 "[GettreatyfactionPopularityStatus]"
+ JAP_treaty_faction_popularity_status_amount:0 "[?JAP.JAP_treaty_faction_popularity|0]"
  JAP_loyalty_status_crushed:0 "§gCrushed§!"
  JAP_loyalty_status_integrated:0 "§gIntegrated§!"
  JAP_popularity_status_crushed:0 "$JAP_loyalty_status_crushed$"
  JAP_popularity_status_integrated:0 "$JAP_loyalty_status_integrated$"
+
+ ####################################################################################################
+ 
  JAP_toseiha_name_text:0 "Toseiha"
  JAP_kodoha_name_text:0 "Kodoha"
  JAP_fleet_faction_name_text:0 "Kantaiha"
