--- a/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
@@ -1,5 +1,5 @@
 ﻿l_japanese:
-# 全体社会主義
+#全体社会主義
  total_socialism:0 "全体社会主義"
  total_socialism_noun:0 "全体社会主義"
  total_socialism_desc:0 "全体社会主義政権"
@@ -24,7 +24,7 @@
  trotskyism_ideology_desc:0 ""
  trotskyism_ideology_trait:0 "トロツキー主義者"
  
-# 急進社会主義
+#急進社会主義
  radical_socialism:0 "急進社会主義"
  radical_socialism_noun:0 "急進社会主義"
  radical_socialism_desc:0 "急進社会主義政権"
@@ -34,7 +34,7 @@
  radical_socialism_ideology_desc:0 ""
  radical_socialism_ideology_trait:0 "急進社会主義者"
  
-# 社会民主主義
+#社会民主主義
  social_democracy:0 "社会民主主義"
  social_democracy_noun:0 "社会民主主義"
  social_democracy_desc:0 "社会民主主義政権"
@@ -44,7 +44,7 @@
  social_democracy_ideology_desc:0 ""
  social_democracy_ideology_trait:0 "社会民主主義者"
  
-# 自由民主主義
+#自由民主主義
  liberal_democracy:0 "自由民主主義"
  liberal_democracy_noun:0 "自由民主主義"
  liberal_democracy_desc:0 "自由民主主義政権"
@@ -57,7 +57,7 @@
  conservative_liberalism_ideology_desc:0 ""
  conservative_liberalism_ideology_trait:0 "保守自由主義者"
  
-# 保守民主主義
+#保守民主主義
  conservative_democracy:0 "保守民主主義"
  conservative_democracy_noun:0 "保守民主主義"
  conservative_democracy_desc:0 "保守民主主義政権"
@@ -69,8 +69,11 @@
  christian_democracy_ideology:0 "キリスト教民主主義"
  christian_democracy_ideology_desc:0 ""
  christian_democracy_ideology_trait:0 "キリスト教民主主義者"
+ liberal_conservatism_ideology:0 "自由保守主義"
+ liberal_conservatism_ideology_desc:0 ""
+ liberal_conservatism_ideology_trait:0 "自由保守主義者"
  
-# 権威民主主義
+#権威民主主義
  authoritative_democracy:0 "権威民主主義"
  authoritative_democracy_noun:0 "権威民主主義"
  authoritative_democracy_desc:0 "権威民主主義政権"
@@ -82,11 +85,14 @@
  authoritarian_conservatism_ideology:0 "権威保守主義"
  authoritarian_conservatism_ideology_desc:0 ""
  authoritarian_conservatism_ideology_trait:0 "権威保守主義者"
+ kemalism_ideology:0 "ケマル主義"
+ kemalism_ideology_desc:0 ""
+ kemalism_ideology_trait:0 "ケマル主義者"
  provisional_government_ideology:0 "臨時政府"
  provisional_government_ideology_desc:0 ""
  provisional_government_ideology_trait:0 "臨時政府派"
  
-# 国家権威主義
+#国家権威主義
  national_authoritarianism:0 "国家権威主義"
  national_authoritarianism_noun:0 "国家権威主義"
  national_authoritarianism_desc:0 "国家権威主義政権"
@@ -99,7 +105,7 @@
  colonial_government_ideology_desc:0 ""
  colonial_government_ideology_trait:0 "植民地政府派"
  
-# 国家大衆主義
+#国家大衆主義
  national_populism:0 "国家大衆主義"
  national_populism_noun:0 "国家大衆主義"
  national_populism_desc:0 "国家大衆主義政権"
@@ -112,6 +118,6 @@
  francoism_ideology_desc:0 "フランコ主義とは、権威主義や反共産主義、スペイン民族主義、国家カトリック、君主主義、軍国主義、国民保守主義、反フリーメーソン、反カタロニア主義、汎ヒスパニア主義、反自由主義を包括した思想である。"
  francoism_ideology_trait:0 "フランコ主義者"
  national_socialism_ideology:0 "国民社会主義"
- national_socialism_ideology_desc:0 "かつてドイツにこの主義を掲げた与党があった。しかし先の大戦を引き起こし世界から忌み嫌われることとなった。"
+ national_socialism_ideology_desc:0 ""
  national_socialism_ideology_trait:0 "国民社会主義者"
  
