--- a/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
@@ -1,13 +1,13 @@
 ﻿l_japanese:
-# 全体社会主義
- orthodox_socialism:0 "全体社会主義"
- orthodox_socialism_noun:0 "全体社会主義"
- orthodox_socialism_desc:0 "全体社会主義政権"
- orthodox_socialism_drift:0 "日毎の全体社会主義への支援"
- orthodox_socialism_acceptance:0 "全体社会主義との外交容認"
- orthodox_socialism_ideology:0 "全体社会主義"
+# 正統社会主義
+ orthodox_socialism:0 "正統社会主義"
+ orthodox_socialism_noun:0 "正統社会主義"
+ orthodox_socialism_desc:0 "正統社会主義政権"
+ orthodox_socialism_drift:0 "日毎の正統社会主義への支援"
+ orthodox_socialism_acceptance:0 "正統社会主義との外交容認"
+ orthodox_socialism_ideology:0 "正統社会主義"
  orthodox_socialism_ideology_desc:0 ""
- orthodox_socialism_ideology_trait:0 "全体社会主義者"
+ orthodox_socialism_ideology_trait:0 "正統社会主義者"
  bukharinism_ideology:0 "ブハーリン主義"
  bukharinism_ideology_desc:0 ""
  bukharinism_ideology_trait:0 "ブハーリン主義者"
@@ -24,15 +24,15 @@
  trotskyism_ideology_desc:0 ""
  trotskyism_ideology_trait:0 "トロツキー主義者"
  
-# 急進社会主義
- progressive_socialism:0 "急進社会主義"
- progressive_socialism_noun:0 "急進社会主義"
- progressive_socialism_desc:0 "急進社会主義政権"
- progressive_socialism_drift:0 "日毎の急進社会主義への支援"
- progressive_socialism_acceptance:0 "急進社会主義との外交容認"
- progressive_socialism_ideology:0 "急進社会主義"
+# 革新社会主義
+ progressive_socialism:0 "革新社会主義"
+ progressive_socialism_noun:0 "革新社会主義"
+ progressive_socialism_desc:0 "革新社会主義政権"
+ progressive_socialism_drift:0 "日毎の革新社会主義への支援"
+ progressive_socialism_acceptance:0 "革新社会主義との外交容認"
+ progressive_socialism_ideology:0 "革新社会主義"
  progressive_socialism_ideology_desc:0 ""
- progressive_socialism_ideology_trait:0 "急進社会主義者"
+ progressive_socialism_ideology_trait:0 "革新社会主義者"
  
 #社会民主主義
  social_democracy:0 "社会民主主義"
